turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:10: error: value % is not a member of java.awt.Color
		setCouleurBrosse(colors(I+1)%colors.length);
                                            ^LangtonsAnt:17: error: value % is not a member of java.awt.Color
		setCouleurBrosse(colors(I+1)%colors.length);
                                            ^