turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {
	var I=0;
	for (i <- 0 to colors.length-1) {
		if (getCouleurSol()==colors(i)) {
			I=i;
		}
	}
	if (rule(I)=='R') {
		setCouleurBrosse(colors(I+1)%colors.length);
		baisseBrosse();
		leveBrosse();
		droite();
		avance();
	}
	else if (rule(I)=='L') {
		setCouleurBrosse(colors(I+1)%colors.length);
		baisseBrosse();
		leveBrosse();
		gauche();
		avance();
	}	
}
